syntax = "proto3";

option go_package = "./proto";

import "google/protobuf/timestamp.proto";

message Habitante {
    string id = 1;
}

message ConsultaStatus {
    bool error = 1;
}

message SaidaStatus {
    bool error = 1;
}

service Sacerdote {
    rpc Consultar(Habitante) returns (ConsultaStatus){}
    rpc Sair(Habitante) returns (SaidaStatus){}
    rpc ConsultarSaldo(SaldoConsulta) returns (SaldoCliente){}
    rpc MudarSaldo(SaldoAtualizacao) returns (SaldoCliente){}
    rpc ConsultarExtrato(Habitante) returns (Extrato){}
}

message Transacao {
    string tipo = 1;
    int64 valor = 2;
    google.protobuf.Timestamp realizadaEm = 3;
    string descricao = 4;
}

message Extrato {
    int64 saldo = 1;
    int64 limite = 2;
    repeated Transacao ultimas_transacoes = 3;
}

message SaldoConsulta {
    string clienteId = 1;
}

message SaldoAtualizacao {
    string clienteId = 1;
    string motivo=2;
    int64 novoSaldo=3;
}

message SaldoCliente {
    int64 saldo = 1;
    int64 limite = 2;
}
